[lworld] [AArch64] TestCallingConventionC1 test63 and test64 get incorrect result

XMLWordPrintable

      Caused by: java.lang.RuntimeException: assertEquals: expected -1163019586 to equal 777
      at jdk.test.lib.Asserts.fail(Asserts.java:594)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:205)
      at jdk.test.lib.Asserts.assertEquals(Asserts.java:189)
      at jdk.test.lib.Asserts.assertEQ(Asserts.java:166)
      at compiler.valhalla.inlinetypes.TestCallingConventionC1.test64_verifier(TestCallingConventionC1.java:1518)
      ... 9 more

            Assignee:
            Nick Gasson
            Reporter:
            Nick Gasson
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: